src/test/deca/codegen/valid/Instanceof.deca
// Test sur instanceof

// Date: 20.01.2022

class A{

    int e;

    void action (){
        this.e = this.e + 1;
    }
}


{
A a = new A();
if (a instanceof A){
    println ("ok");
    }
}