src/test/deca/codegen/invalid/while2.deca
// Un autre while inf

//Date: 19.01.2022

{
int a = 2;
while (a < 5){
    if (a == 3){
        a ++;
        return a;
    }
    println ("inf");
}

}